--- a/animation/index.html
+++ b/animation/index.html
@@ -20,7 +20,7 @@
 
         .car1-position {
             position: absolute;
-            top: 400px;
+            top: 150px;
             left: 325px
         }
 
@@ -33,7 +33,7 @@
 
         .car2-position {
             position: absolute;
-            top: 280px;
+            top: 230px;
             left: 200px;
             width: 900px
         }
@@ -47,7 +47,7 @@
 
         .title-position {
             position: absolute;
-            top: 200px;
+            top: 150px;
             left: 115px;
             width: 800px
         }
@@ -498,22 +498,27 @@
             </tbody>
         </table>
 	</header>
-	<div class="animated fadeOut">
-			<img src="cover/road1.png" class="road1-position"></img>
+
 	
-			<!--如何把兩個動畫效果結合-->
-			<img src="cover/car1.png" class="car1-position car-animation"></img>
+
+	<div class="animated fadeOut" style="margin-left:125px">
+			<img src="cover/road1.png" class="road1-position" style="width:50%;margin-left:215px"></img>
+	 
+		
+			<img src="cover/car1.png" class="car1-position car-animation " style="margin-left:195px;width:15%"></img>
 	
 		</div>
-		<!-- 如何讓背景出來之後又淡掉（也是結合兩個動畫，但動畫時間不一樣）-->
+	
 		<div class="animated fadeIn">
-			<img src="cover/road2-02.png" class="road2-02-position"></img>
-			<!--如何重複用zoom in，但擁有不同細節效果 -->
-			<img src="cover/fire.png" class="fire-position bg-flash"></img>
-			<img src="cover/car2.png" class="car2-position"></img>
+			<img src="cover/road2-02.png" class="road2-02-position" style="margin-left:325px;margin-top:60px;width:45%"></img>
+			
+			<img src="cover/fire.png" class="fire-position bg-flash"style="margin-left:215px;width:40%"></img>
+			<img src="cover/car2.png" class="car2-position"style="margin-left:215px;width:40%"></img>
 	
 		</div>
-		<img src="cover/title2.png" class="title-position animated fadeIn jackInTheBox"></img>
+		<img src="cover/title2.png" class="title-position animated fadeIn jackInTheBox" style="margin-left:248px;width:40%"></img>
+
+
 	
 	
 	<p class="intro-font bg">
@@ -617,9 +622,12 @@
 	<p class="intro-font bg">
 	「從刑法將酒駕致死最高刑期改為十年後，但這四年來沒有一個法官判過十年。」林美娜認為，「法律被高高拿起，法官卻輕輕放下」，法官的輕判讓懲罰的嚇阻效果大大降低。她表示，近年來社會大眾對酒駕肇事感到厭惡、警察取締也變得積極，但法官卻總是輕判。「如果今天酒駕會被處無期徒刑，而且百分之百會被抓到，那刑法就有嚇阻效果。」李茂生表示酒駕被抓到的機會不是那高，所以很多人會心存僥倖。如果要讓刑法有威嚇作用制止酒駕，有兩個條件：一是警察能確實抓到酒駕。二是違反比例原則。但在現實社會中，這兩個條件都不可能達到。「ㄧ酒駕就關起來，他的工作、家庭、與社會的關係，全部都被斷絕掉。他只會變得更加沈淪，問題並不會解決。」李茂生建議將單純酒駕者，移到另一套系統內，以行政強制力治療，給予醫療協助等。他認為如何幫助酒駕者回到正軌，才是應該要思考的問題。
 	</p>
-	<div class="area-title bg">
-		<img src="area-2/a2-title.png"></img>
-	</div>
+
+
+	
+	<div style="position:relative;padding-bottom:calc(300/250*100%);margin-top:100px">
+<iframe src="http://www.cs.nccu.edu.tw/~d10201/vis17/hw3/start.html" style="width:100%;height:100%;position:absolute"> </iframe>
+</div>
 	<p class="intro-font-title bg">
 		面對酒駕 預防勝過處罰
 	</p>
