--- a/list/list.html
+++ b/list/list.html
@@ -147,7 +147,7 @@
         <!--header-->
         <div style="background-color:#eeeeed;width:100%;height:100px" class="header">
         </div>
-        <img src="longlogo.png" class="logo" style="width:auto;height:60px">
+         <a href="file:///Users/chentingrong/Desktop/7pupu/list/list.html"><img src="longlogo.png" class="logo" style="width:auto;height:60px"></a>
         </img>
 
         <!--<div class="flex-menu">
@@ -174,15 +174,14 @@
             </a>
 
             <div class="dropdown-menu pupu-drop-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">性別</a>
-                <a class="dropdown-item" href="#">教育</a>
-                <a class="dropdown-item" href="#">體育</a>
-                <a class="dropdown-item" href="#">藝文</a>
+                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fkellyyyyyyyyyy.github.io%2Fkellynews%2Fpupuworktest.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">性別</a>
+                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjennychen850712.github.io%2F7pupu%2Fjenny%2Fjenny.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">教育</a>
+                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjoytotheworld1996.github.io%2Fjoytotheworld20180628%2Fmine.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">體育</a>
+                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fminjhen.github.io%2Fweng%2F&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">藝文</a>
             </div>
         </div>
 
-        <!--如何讓搜尋鍵拉出空格-->
-        <img src="search.png" class="search" style="width:auto;height:60px">
+    
 
 
         <!--cover-->
@@ -195,7 +194,7 @@
                     <div class="card-body">
 
                         <p class="card-text">
-                            <a href="https://www.facebook.com/">【專題記者劉祐齊、周瑩慈、陳詩妤、陳亭蓉、曾智怡報導】打開電視、翻開報紙，酒駕肇事的新聞幾乎天天上演。根據內政部警政署的資料顯示，民國104年酒駕共造成8262人死傷，平均一天就有22.6人因為酒駕受傷或死亡。要如何阻止憾事發生？加重刑責，真的能有效杜絕憾事的發生嗎？（......詳全文）</a>
+                            <a href="https://jennychen850712.github.io/7pupu/animation/index.html">【專題記者劉祐齊、周瑩慈、陳詩妤、陳亭蓉、曾智怡報導】打開電視、翻開報紙，酒駕肇事的新聞幾乎天天上演。根據內政部警政署的資料顯示，民國104年酒駕共造成8262人死傷，平均一天就有22.6人因為酒駕受傷或死亡。要如何阻止憾事發生？加重刑責，真的能有效杜絕憾事的發生嗎？（......詳全文）</a>
                         </p>
 
                     </div>
@@ -218,7 +217,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://www.facebook.com/">【記者王若璞台北報導】「你們手上的車票是到終點站的，絕對不可以中途下車！」葉永鋕母親的紀錄片投影在螢幕上，讓雨中堅守不肯離去的支持者紅了眼眶。（......詳全文）</a>
+                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fkellyyyyyyyyyy.github.io%2Fkellynews%2Fpupuworktest.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者王若璞台北報導】「你們手上的車票是到終點站的，絕對不可以中途下車！」葉永鋕母親的紀錄片投影在螢幕上，讓雨中堅守不肯離去的支持者紅了眼眶。（......詳全文）</a>
                             </p>
 
                         </div>
@@ -229,7 +228,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://www.facebook.com/">【專題記者周瑩慈、陳亭蓉、劉祐齊、曾智怡、陳詩妤綜合報導】大部份人小學生活的記憶，是按照課表上課，午覺睡醒後再繼續上課，放學回家或去安親班等待爸媽。（......詳全文）</a>
+                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjennychen850712.github.io%2F7pupu%2Fjenny%2Fjenny.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【專題記者周瑩慈、陳亭蓉、劉祐齊、曾智怡、陳詩妤綜合報導】大部份人小學生活的記憶，是按照課表上課，午覺睡醒後再繼續上課，放學回家或去安親班等待爸媽。（......詳全文）</a>
                             </p>
 
                         </div>
@@ -244,7 +243,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://www.facebook.com/">【記者陳詩妤台東報導】「2016台灣國際衝浪公開賽」11月23至27日盛大舉辦，各地選手皆對台東浪頭表示驚艷。台灣擁有良好衝浪場地，然而選手並不多且年齡層偏高（......詳全文）</a>
+                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjoytotheworld1996.github.io%2Fjoytotheworld20180628%2Fmine.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者陳詩妤台東報導】「2016台灣國際衝浪公開賽」11月23至27日盛大舉辦，各地選手皆對台東浪頭表示驚艷。台灣擁有良好衝浪場地，然而選手並不多且年齡層偏高（......詳全文）</a>
                             </p>
 
                         </div>
@@ -257,7 +256,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://www.facebook.com/">【記者翁芊儒新竹報導】一團團變異腫瘤散佈在白色的牆面上，寫實擬真的外型乍看下就似子宮內血淋淋的胚胎。國立清華大學藝術教育與創作研究所學生鄭迺蓁（......詳全文）</a>
+                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fminjhen.github.io%2Fweng%2F&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者翁芊儒新竹報導】一團團變異腫瘤散佈在白色的牆面上，寫實擬真的外型乍看下就似子宮內血淋淋的胚胎。國立清華大學藝術教育與創作研究所學生鄭迺蓁（......詳全文）</a>
                             </p>
 
                         </div>
@@ -274,7 +273,7 @@
                     <div class="card-body">
 
                         <p class="card-text">
-                            <a href="https://www.facebook.com/">【記者楊旻蓁高雄報導】「我不追求美麗或靜止狀態的景觀，而是怎麼將不安、不舒適感用作品呈現出來。」倫敦大學金匠學院（Goldsmiths, University of London）影像與（......詳全文）</a>
+                            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fminjhen.github.io%2Fmin3%2F&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者楊旻蓁高雄報導】「我不追求美麗或靜止狀態的景觀，而是怎麼將不安、不舒適感用作品呈現出來。」倫敦大學金匠學院（Goldsmiths, University of London）影像與（......詳全文）</a>
                         </p>
 
                     </div>
@@ -288,19 +287,19 @@
         <div style="background-color:#eeeeed;width:100%;height:131px " class="flex-container">
             <div style="display:flex;align-items:center">
                 <div class="item1"></div>
-                <div>關於我們</div>
+                <a href="http://www.unews.nccu.edu.tw/"><div>關於我們</div></a> 
             </div>
             <div style="display:flex;align-items:center">
                 <div class="item2" style="display:inline-block;vertical-align:middle"></div>
-                <div style="display:inline-block;align-items:center">聯絡我們</div>
+               <a href="http://www.unews.nccu.edu.tw/%E7%88%86%E6%96%99%E5%B0%88%E7%B7%9A/"> <div style="display:inline-block;align-items:center">聯絡我們</div></a>
             </div>
             <div style="display:flex;align-items:center">
                 <div class="item3" style="display:inline-block;vertical-align:middle"></div>
-                <div style="display:inline-block;align-items:center">多媒體專題</div>
+                <a href="https://jennychen850712.github.io/7pupu/animation/index.html"><div style="display:inline-block;align-items:center">多媒體專題</div></a> 
             </div>
             <div style="display:flex;align-items:center">
                 <div class="item4" style="display:inline-block;vertical-align:middle"></div>
-                <div style="display:inline-block;align-items:center">個人作品</div>
+                <a href="http://www.unews.nccu.edu.tw/?s=%E9%99%B3%E4%BA%AD%E8%93%89"><div style="display:inline-block;align-items:center">個人作品</div></a>
             </div>
         </div>
 
