--- a/animation/index.html
+++ b/animation/index.html
@@ -141,7 +141,7 @@
 		a {
 			color: #2d2d2d;
 			text-decoration: none;
-			border-bottom: 1px solid #c71b0a;
+			
 		}
 
 		header>table {
@@ -493,7 +493,10 @@
 		footer {
 			background-color: #bfbfbf;
 			min-height: 300px;
+			
 		}
+
+	
 
 		footer>table {
 			border-spacing: 45px;
@@ -543,6 +546,9 @@
 		}
 
 
+
+
+
 		@media screen and (max-width: 767px) {
 			table.hidden-on-mobile {
 				display: none;
@@ -580,7 +586,7 @@
 				<tr>
 					<td>
 						<div class="logo">
-							<img src="長版-01.png" alt="logo7pupu" class="logo" />
+						<a href="https://jennychen850712.github.io/7pupu/list/list.html">	<img src="長版-01.png" alt="logo7pupu" class="logo" /></a>
 						</div>
 					</td>
 					<td style="width:22px;">
