--- a/animation/index.html
+++ b/animation/index.html
@@ -579,7 +579,7 @@
 	</style>
 </head>
 
-<body style="background-color:#cc8e24">
+<body style="background-color:#91989F">
 	<header class="header">
 		<table>
 			<tbody>
