--- a/list/list.html
+++ b/list/list.html
@@ -209,10 +209,10 @@
             </a>
 
             <div class="dropdown-menu pupu-drop-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fkellyyyyyyyyyy.github.io%2Fkellynews%2Fpupuworktest.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">性別</a>
-                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjennychen850712.github.io%2F7pupu%2Fjenny%2Fjenny.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">教育</a>
-                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjoytotheworld1996.github.io%2Fjoytotheworld20180628%2Fmine.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">體育</a>
-                <a class="dropdown-item" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fminjhen.github.io%2Fweng%2F&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">藝文</a>
+                <a class="dropdown-item" href="https://kellyyyyyyyyyy.github.io/kellynews/pupuworktest.html">性別</a>
+                <a class="dropdown-item" href="https://jennychen850712.github.io/7pupu/jenny/jenny.html">教育</a>
+                <a class="dropdown-item" href="https://joytotheworld1996.github.io/joytotheworld20180628/mine.html">體育</a>
+                <a class="dropdown-item" href="https://minjhen.github.io/weng/">藝文</a>
             </div>
         </div>
 
@@ -252,7 +252,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fkellyyyyyyyyyy.github.io%2Fkellynews%2Fpupuworktest.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者王若璞台北報導】「你們手上的車票是到終點站的，絕對不可以中途下車！」葉永鋕母親的紀錄片投影在螢幕上，讓雨中堅守不肯離去的支持者紅了眼眶。（......詳全文）</a>
+                                <a href="https://kellyyyyyyyyyy.github.io/kellynews/pupuworktest.html">【記者王若璞台北報導】「你們手上的車票是到終點站的，絕對不可以中途下車！」葉永鋕母親的紀錄片投影在螢幕上，讓雨中堅守不肯離去的支持者紅了眼眶。（......詳全文）</a>
                             </p>
 
                         </div>
@@ -263,7 +263,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjennychen850712.github.io%2F7pupu%2Fjenny%2Fjenny.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【專題記者周瑩慈、陳亭蓉、劉祐齊、曾智怡、陳詩妤綜合報導】大部份人小學生活的記憶，是按照課表上課，午覺睡醒後再繼續上課，放學回家或去安親班等待爸媽。（......詳全文）</a>
+                                <a href="https://jennychen850712.github.io/7pupu/jenny/jenny.html">【專題記者周瑩慈、陳亭蓉、劉祐齊、曾智怡、陳詩妤綜合報導】大部份人小學生活的記憶，是按照課表上課，午覺睡醒後再繼續上課，放學回家或去安親班等待爸媽。（......詳全文）</a>
                             </p>
 
                         </div>
@@ -278,7 +278,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fjoytotheworld1996.github.io%2Fjoytotheworld20180628%2Fmine.html&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者陳詩妤台東報導】「2016台灣國際衝浪公開賽」11月23至27日盛大舉辦，各地選手皆對台東浪頭表示驚艷。台灣擁有良好衝浪場地，然而選手並不多且年齡層偏高（......詳全文）</a>
+                                <a href="https://joytotheworld1996.github.io/joytotheworld20180628/mine.html">【記者陳詩妤台東報導】「2016台灣國際衝浪公開賽」11月23至27日盛大舉辦，各地選手皆對台東浪頭表示驚艷。台灣擁有良好衝浪場地，然而選手並不多且年齡層偏高（......詳全文）</a>
                             </p>
 
                         </div>
@@ -291,7 +291,7 @@
                         <div class="card-body">
 
                             <p class="card-text">
-                                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fminjhen.github.io%2Fweng%2F&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者翁芊儒新竹報導】一團團變異腫瘤散佈在白色的牆面上，寫實擬真的外型乍看下就似子宮內血淋淋的胚胎。國立清華大學藝術教育與創作研究所學生鄭迺蓁（......詳全文）</a>
+                                <a href="https://minjhen.github.io/weng/">【記者翁芊儒新竹報導】一團團變異腫瘤散佈在白色的牆面上，寫實擬真的外型乍看下就似子宮內血淋淋的胚胎。國立清華大學藝術教育與創作研究所學生鄭迺蓁（......詳全文）</a>
                             </p>
 
                         </div>
@@ -308,7 +308,7 @@
                     <div class="card-body">
 
                         <p class="card-text">
-                            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fminjhen.github.io%2Fmin3%2F&h=AT17ISZKcAPkl2tyGXQPWcHDrHFIuiIrKGCCULqneetfrbLufJ4rOp-EP_Tt_Hw66RbiU1NHbm_Zsn91ioSdA3jloUQ3epWIVUbv5dc8PXw9rITzJe2ilD_md0NKLV0UYvIPdLWLaVI">【記者楊旻蓁高雄報導】「我不追求美麗或靜止狀態的景觀，而是怎麼將不安、不舒適感用作品呈現出來。」倫敦大學金匠學院（Goldsmiths, University of London）影像與（......詳全文）</a>
+                            <a href="https://minjhen.github.io/min3/">【記者楊旻蓁高雄報導】「我不追求美麗或靜止狀態的景觀，而是怎麼將不安、不舒適感用作品呈現出來。」倫敦大學金匠學院（Goldsmiths, University of London）影像與（......詳全文）</a>
                         </p>
 
                     </div>
